--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.0-rc2",
     "@nuxtjs/axios": "^5.0.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.9.2",
     "lodash": "^4.17.11",
     "nuxt": "^2.0.0",
     "vuetify": "^1.2.4"
